Revert "Fix white space above header"
This reverts commit 2127e04ba452dec2ff55da745b06d37307f81b5a.

--- a/src/layouts/RootLayout.module.css
+++ b/src/layouts/RootLayout.module.css
@@ -1,5 +1,5 @@
 .heroVideoWrap {
-  position: fixed;
+  position: absolute;
   inset: 0;
   z-index: -2;
   overflow: hidden;
@@ -13,7 +13,7 @@
 
 .heroOverlay {
   background-color: rgba(0, 0, 0, 0.6);
-  position: fixed;
+  position: absolute;
   inset: 0;
   z-index: -1;
 }
@@ -21,11 +21,9 @@
 .heroSection {
   position: relative;
   height: 100vh;
-  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
   text-align: center;
-  padding-top: var(--mantine-spacing-xl); /* if you wanna offset content slightly down */
 }
